refactor: Update padding, margin, and gap in profile and side sections

--- a/search.html
+++ b/search.html
@@ -31,34 +31,17 @@
 </head>
 
 <body>
-  <header-container id="U0AB236B6" create-account="/join" create-content="/create"
+  <!-- <header-container id="U0AB236B6" create-account="/join" create-content="/create"
     user-profile="/u/U0AB236B6" user-img="img/img.jpg" user-analytics="/u/U0AB236B6/analytics"
     stories-popular="/stories/popular" stories-recent="/stories/recent" stories-curated="/stories/curated"
     discover="/discover" home="/home" journals="/journals" authors="/authors" github="https://github.com/fescii"
     supabase="/link" resource-apis="/apis" resource-feature="/feature-request" resource-shop="/shop"
     resource-guide="/guides" resource-newsletter="/newsletter" resource-rss="/rss">
-  </header-container>
+  </header-container> -->
 
-  <app-search topics='[
-    {
-      "id": "T0A03PBA",
-      "name": "Health Care",
-      "url": "health-care",
-      "stories": "60k"
-    },
-    {
-      "id": "T0AB3P92",
-      "name": "Kendrick Lamar",
-      "url": "kendrick-lamar",
-      "stories": "603"
-    },
-    {
-      "id": "T0A83PB9",
-      "name": "Programming",
-      "url": "programming",
-      "stories": "1.03k"
-    }
-    ]'>
+  <app-search url="/search" query="Linux" page="1" tab="stories"
+
+  >
   </app-search>
 </body>
 
