--- a/test.html
+++ b/test.html
@@ -28,13 +28,13 @@
 </head>
 
 <body>
-  <header-container id="U0AB236B6" create-account="/join" create-content="/create" user-profile="/u/U0AB236B6"
+  <!-- <header-container id="U0AB236B6" create-account="/join" create-content="/create" user-profile="/u/U0AB236B6"
     user-img="img/img.jpg" user-analytics="/u/U0AB236B6/analytics" stories-popular="/stories/popular"
     stories-recent="/stories/recent" stories-curated="/stories/curated" discover="/discover" home="/home"
     journals="/journals" authors="/authors" github="https://github.com/fescii" supabase="/link" resource-apis="/apis"
     resource-feature="/feature-request" resource-shop="/shop" resource-guide="/guides" resource-newsletter="/newsletter"
     resource-rss="/rss">
-  </header-container>
+  </header-container> -->
 
   <main class="test">
     <section class="content">
@@ -129,7 +129,7 @@
         </div>
       </div>
 
-      <discover-people url="/people/discover"></discover-people>
+      <people-feed opinions="all" url="${this._url}/people"></people-feed>
 
     </section>
     <section class="side">
