refactor: Update padding, margin, and gap in profile and side sections

--- a/test.html
+++ b/test.html
@@ -129,7 +129,8 @@
         </div>
       </div>
 
-      <people-feed opinions="all" url="${this._url}/people"></people-feed>
+      <topics-feed opinions="all" url="topic"></topics-feed>
+
 
     </section>
     <section class="side">
