--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     tab="replies" replies-url="/s/P0AB236B6BA17/replies" likes-url="/s/P0AB236B6BA17/likes"
     user-url="/u/U0A43PBAH6A" auth-url="/join" url="/s/P0AB236B6HA89B" search-url="/search" host="https://getopas.pythonanywhere.com"
     next-title="Behind the scenes of Vercel's infrastructure: Achieving optimal scalability and performance"
-    opinions="673" liked="false" likes="972" views="6473"
+    replies="673" liked="false" likes="972" views="6473"
     author-username="U0A43PBAH6A" author-img="img/img.jpg" author-verified="true" author-name="Fredrick Ochieng" author-followers="7623"
     author-following="263" author-follow="false" author-bio="I am a student at the East African University, I am a software developer and a tech enthusiast.
       I love to write about technology and software development."
