--- a/test.html
+++ b/test.html
@@ -129,7 +129,7 @@
         </div>
       </div>
 
-      <topics-feed opinions="all" url="topic"></topics-feed>
+      <topics-feed replies="all" url="topic"></topics-feed>
 
 
     </section>
