Added history to pages:

--- a/search.html
+++ b/search.html
@@ -39,9 +39,7 @@
     resource-guide="/guides" resource-newsletter="/newsletter" resource-rss="/rss">
   </header-container> -->
 
-  <app-search url="/search" query="Linux" page="1" tab="stories"
-
-  >
+  <app-search url="/search" query="null" page="1" tab="stories">
   </app-search>
 </body>
 
