Added history to pages:  all defined pages

--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
     resource-rss="/rss">
   </header-container> -->
 
-  <app-home url="app/home"></app-home>
+  <app-home url="/home"></app-home>
   <!--<footer class="footer">
     <section class="newsletter">
       <div class="title">Join Our Newsletter</div>
