--- a/test.html
+++ b/test.html
@@ -131,10 +131,51 @@
       <!-- <topics-feed replies="all" url="topic"></topics-feed> -->
     </section>
     <section class="side">
-      <hover-author username="U0A43PHBAH6A" picture="/img/img.jpg" name="Fredrick Ochieng" followers="7623" following="263" user-follow="false" verified="true" url="/u/u0a43phbah6a"
-      bio="I'm a software engineer and a tech enthusiast. I love to write about software engineering, tech, and programming.
-        I'm a software engineer and a tech enthusiast. I love to write about software engineering, tech, and programming.">
-      </hover-author>
+      <div class="author">
+        <a href="/u/u0a43phbah6a" class="meta link">U0A43PHBAH6A</a>
+
+        <div class="content-container">
+          <span class="pointer"></span>
+          <div class="overlay">
+            <div class="top">
+              <div class="avatar">
+                <img src="img/img.jpg" alt="Author name">
+              <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-patch-check-fill" viewBox="0 0 16 16">
+                  <path d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01zm.287 5.984-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708.708"></path>
+                </svg>
+              </div>
+              </div>
+              <div class="name">
+                <h4 class="name">
+                  <span class="name">Fredrick Ochieng</span>
+                </h4>
+                <span class="username">
+                  <span class="text">U0A43PHBAH6A</span>
+                </span>
+              </div>
+            </div>
+            <div class="stats">
+              <span class="stat">
+                <span class="number">7.62k</span>
+                <span class="label">Followers</span>
+              </span>
+              <span class="sp">•</span>
+              <span class="stat">
+                <span class="number">263</span>
+                <span class="label">Following</span>
+              </span>
+            </div>
+            <div class="bio">
+              <p>I am a student at the East African University, I am a software developer and a tech enthusiast.</p>
+            </div>
+            <div class="actions">
+              <span class="action view">View</span>
+              <span class="action follow">Follow</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
