fix profile page url - issue

--- a/profile.html
+++ b/profile.html
@@ -30,13 +30,23 @@
 </head>
 
 <body>
-  <app-profile you="false" url="/u/u0a43pbah6a1" tab="stories" views="3679548" topics="239" stories="609"
-    stories-url="/u/u0a43pbah6a1/stories" replies-url="/u/u0a43pbah6a1/replies" followers-url="/u/u0a43pbah6a1/followers" following-url="/u/u0a43pbah6a1/following"
+  <!-- <app-profile you="false" url="/u/u0a43pbah6a1" tab="stories"
+    stories-url="/u/u0a43pbah6a1/stories" replies-url="/u/u0a43pbah6a1/replies"
+    followers-url="/u/u0a43pbah6a1/followers" following-url="/u/u0a43pbah6a1/following"
     username="U0A43PBAH6A1" picture="img/img.jpg" verified="true" name="Fredrick Ochieng" followers="7623"
     following="263" user-follow="false" bio="I am a student at the east african university, I am a software developer and a tech enthusiast.
       I love to write about technology and software development."
     >
-  </app-profile>
+  </app-profile> -->
+
+  <app-profile you="true" url="/u/u0a43pbah6a" tab="stories"
+        stories-url="/u/u0a43pbah6a/stories" replies-url="/u/u0a43pbah6a/replies" 
+        followers-url="/u/u0a43pbah6a/followers" following-url="/u/u0a43pbah6a/following"
+        username="U0A43PBAH6A" picture="/img/img.jpg" verified="true"
+        name="Fredrick Ochieng" followers="7623"
+        following="263" user-follow="false" bio="I am a student at the East African University, I am a software developer and a tech enthusiast.
+          I love to write about technology and software development.">
+</app-profile>
 </body>
 
 </html>
