--- a/topic.html
+++ b/topic.html
@@ -39,8 +39,8 @@
     resource-guide="/guides" resource-newsletter="/newsletter" resource-rss="/rss">
   </header-container> -->
 
-  <app-topic subscribers="901" stories="67259" hash="T0A43PBA69HAB"
-    name="health care" url="/t/T0A43PBA69HAB"  subscribed="true"
+  <app-topic subscribers="901" followers="73369" stories="67259" hash="T0A43PBA69HAB"
+    name="health care" url="/t/T0A43PBA69HAB" subscribed="true"
     description="Health care is the maintenance or improvement of health via the prevention, diagnosis, treatment, recovery, or cure of disease, illness, injury, and other physical and mental impairments in people."
     author-username="U0A43PBAH6A"
     author-img="img/img.jpg" author-verified="true" author-name="Fredrick Ochieng" author-followers="7623"
