Editin the topic page

--- a/topic.html
+++ b/topic.html
@@ -40,7 +40,7 @@
   </header-container> -->
 
   <app-topic subscribers="901" followers="73369" stories="67259" hash="T0A43PBA69HAB"
-    name="health care" url="/t/T0A43PBA69HAB" subscribed="true"
+    name="health care" url="/t/T0A43PBA69HAB" subscribed="false"
     description="Health care is the maintenance or improvement of health via the prevention, diagnosis, treatment, recovery, or cure of disease, illness, injury, and other physical and mental impairments in people."
     author-username="U0A43PBAH6A"
     author-img="img/img.jpg" author-verified="true" author-name="Fredrick Ochieng" author-followers="7623"
