Editin the topic page

--- a/topic.html
+++ b/topic.html
@@ -44,7 +44,7 @@
     contributers-url="/t/T0A43PBA69HAB/contributers" followers-url="/t/T0A43PBA69HAB/followers"
     description="Health care is the maintenance or improvement of health via the prevention, diagnosis, treatment, recovery, or cure of disease, illness, injury, and other physical and mental impairments in people."
     author-username="U0A43PBAH6A"
-    author-img="img/img.jpg" author-verified="true" author-name="Fredrick Ochieng" author-followers="7623"
+    author-picture="img/img.jpg" author-verified="true" author-name="Fredrick Ochieng" author-followers="7623"
     author-following="263" author-follow="false" author-bio="I am a student at the East African University, I am a software developer and a tech enthusiast.
       I love to write about technology and software development.">
   </app-topic>
