Refactor CSS padding in post.loader.js and hover.author.js

--- a/post.html
+++ b/post.html
@@ -54,7 +54,7 @@
     replies-url="/p/P0A43PBA64AB/replies" likes-url="/p/P0A43PBA64AB/likes"
     options='[{"name":"one","text":"Java","votes":367},{"name":"two","text":"Python","votes":986},{"name":"three","text":"JavaScript","votes":879},{"name":"four","text":"C#","votes":117}]'
     author-username="U0A43PBAH6A" author-you="true" author-url="/u/U0A43PBAH6A"
-    author-img="img/img.jpg" author-verified="true" author-name="Fredrick Ochieng" author-followers="7623"
+    author-img="/img/img.jpg" author-verified="true" author-name="Fredrick Ochieng" author-followers="7623"
     author-following="263" author-follow="false" author-bio="I am a student at the East African University, I am a software developer and a tech enthusiast.
       I love to write about technology and software development.">
       <p>Which is the best programming language?</p>
