Refactor user-wrapper and author-wrapper components

--- a/test.html
+++ b/test.html
@@ -128,10 +128,14 @@
           </span>
         </div>
       </div>
-      <topics-feed replies="all" url="topic"></topics-feed>
+      <user-wrapper username="U0DAB69B79NH" name="Porky Pig" picture="/img/img2.png"
+        verified="false" user-follow="false" url="/u/U0BC98H63AB1"
+        following="6723" followers="79734">
+      </user-wrapper>
     </section>
     <section class="side">
-      <author-wrapper username="U0A43PBAH6A" picture="img/img.jpg" name="Fredrick Ochieng" followers="7623" following="263" user-follow="false" verified="true" url="/u/u0a43pbah6a" bio="I am a student at the East African University, I am a software developer and a tech enthusiast.
+      <author-wrapper username="U0A43PBAH6A" picture="img/img.jpg" name="Fredrick Ochieng" followers="7623" following="263" user-follow="false" verified="true" url="/u/u0a43pbah6a"
+       bio="I am a student at the East African University, I am a software developer and a tech enthusiast.
       I love to write about technology and software development.">
       </author-wrapper>
     </section>
