Refactor user-wrapper and author-wrapper components

--- a/test.html
+++ b/test.html
@@ -134,7 +134,7 @@
       </user-wrapper>
     </section>
     <section class="side">
-      <author-wrapper username="U0A43PBAH6A" picture="img/img.jpg" name="Fredrick Ochieng" followers="7623" following="263" user-follow="false" verified="true" url="/u/u0a43pbah6a"
+      <author-wrapper username="U0A43PBAH6A" picture="/img/img.jpg" name="Fredrick Ochieng" followers="7623" following="263" user-follow="false" verified="true" url="/u/u0a43pbah6a"
        bio="I am a student at the East African University, I am a software developer and a tech enthusiast.
       I love to write about technology and software development.">
       </author-wrapper>
