Editin the topic page

--- a/profile.html
+++ b/profile.html
@@ -39,14 +39,20 @@
     >
   </app-profile> -->
 
-  <app-profile you="true" url="/u/u0a43pbah6a" tab="stories"
+  <!-- <app-profile you="true" url="/u/u0a43pbah6a" tab="stories"
         stories-url="/u/u0a43pbah6a/stories" replies-url="/u/u0a43pbah6a/replies" 
         followers-url="/u/u0a43pbah6a/followers" following-url="/u/u0a43pbah6a/following"
         username="U0A43PBAH6A" picture="/img/img.jpg" verified="true"
         name="Fredrick Ochieng" followers="7623"
         following="263" user-follow="false" bio="I am a student at the East African University, I am a software developer and a tech enthusiast.
           I love to write about technology and software development.">
-</app-profile>
+</app-profile> -->
+
+  <app-profile tab="stories" you="false" url="/u/u0bc98h63ab1" stories-url="/u/u0bc98h63ab1/stories" replies-url="/u/u0bc98h63ab1/replies"
+    followers-url="/u/u0bc98h63ab1/followers" following-url="/u/u0bc98h63ab1/following" username="U0BC9BAC53H4" picture="/img/img2.png" 
+    verified="true" name="Yosemite Sam" followers="234" following="36" user-follow="true" 
+    bio="Yosemite Sam here! I'm a cowboy with a passion for adventure and the great outdoors.">
+  </app-profile>
 </body>
 
 </html>
