--- a/test.html
+++ b/test.html
@@ -140,7 +140,7 @@
         </div>
       </div>
      
-      <people-feed replies="all" url="/U0A89BA6/followers"></people-feed>
+      <discover-people  url="/people/discover"></discover-people>
 
     </section>
     <section class="side">
