refactor: Update CSS styles for responsive layout

--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
           </h2>
 					<p class="decription">
 						Dive into dynamic discussions with our intuitive poll feature, allowing you to gauge opinions and spark meaningful conversations.
+					</p>
+          <p class="decription">
             Contribute to topic articles, adding your unique perspective to ongoing debates and discussions.
 					</p>
           <p class="short">
             Your contributions not only enrich the community but also help foster a culture of shared learning and growth.
           </p>
 					<div class="actions">
-						<a href="" class="action explore">
+						<a href="/join" class="action explore">
 							<span class="text">Get started</span>
 							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M13.8055 5.31595C13.6935 5.25395 13.5715 5.22595 13.4515 5.22595C13.1835 5.22595 12.9265 5.36895 12.7905 5.61995C12.5945 5.98495 12.7295 6.43995 13.0945 6.63595C14.9757 7.65095 17.8054 9.64262 18.56 11.2502L4.5 11.2502C4.086 11.2502 3.75 11.5862 3.75 12.0002C3.75 12.4142 4.086 12.7502 4.5 12.7502L18.5584 12.7502C17.8014 14.3594 14.9743 16.3498 13.0945 17.365C12.7295 17.562 12.5945 18.016 12.7905 18.381C12.9875 18.745 13.4445 18.88 13.8055 18.685C14.4665 18.33 20.2505 15.1209 20.2505 11.998C20.2505 8.87895 14.4665 5.67095 13.8055 5.31595Z" fill="black"/>
